# koi

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  index.html  kwasm.js  run.sh  run_single_thread.sh  web_build.sh  web_build_single_thread.sh
crates/kapp/: Cargo.toml  LICENSE-ZLIB.md  README.md
crates/kapp/examples/: README.md  events.rs  hello.rs  hello_async.rs  state_tracking.rs  text_input.rs  user_event.rs
crates/kapp/examples/web_build/: example.js  example_bg.wasm  index.html
crates/kapp/examples/web_build/snippets/kwasm-80cccf68b194aed3/js/: kwasm.js
crates/kapp/gl_context/: Cargo.toml
crates/kapp/gl_context/_examples/: triangle.rs
crates/kapp/gl_context/examples/: platformer.rs  simple_gl.rs
crates/kapp/gl_context/src/: common.rs  lib.rs  macos.rs  sdl.rs
crates/kapp/gl_context/src/web/: gl_context.js  mod.rs
crates/kapp/gl_context/src/windows/: mod.rs  utils_windows.rs
crates/kapp/kapp_platform_common/: Cargo.toml
crates/kapp/kapp_platform_common/src/: cursors.rs  event_receiver.rs  events.rs  keys.rs  lib.rs  platform_traits.rs  redraw_manager.rs  screen_id.rs  window_id.rs  window_parameters.rs
crates/kapp/kapp_platforms/: .gitignore  Cargo.toml
crates/kapp/kapp_platforms/src/: lib.rs
crates/kapp/kapp_platforms/src/macos/: apple.rs  application_mac.rs  events_mac.rs  keys_mac.rs  mod.rs  window_mac.rs
crates/kapp/kapp_platforms/src/sdl/: keys_sdl.rs  mod.rs
crates/kapp/kapp_platforms/src/web/: application_web.rs  event_loop_web.rs  kapp.js  keys_web.rs  mod.rs
crates/kapp/kapp_platforms/src/windows/: application_windows.rs  event_loop_windows.rs  external_windows.rs  keys_windows.rs  mod.rs  utils_windows.rs
crates/kapp/src/: application.rs  async_application.rs  lib.rs  state_tracker.rs  window.rs  window_builder.rs
crates/kaudio/: Cargo.toml  README.md  web_build.sh
crates/kaudio/examples/: file.rs  sine.rs
crates/kaudio/src/: core_audio.rs  lib.rs  sdl.rs  sound.rs  wav.rs  web.rs  web_worklet.js  windows.rs
crates/kcolor/: Cargo.toml
crates/kcolor/src/: color_constants.rs  lib.rs
crates/kecs/: Cargo.toml
crates/kecs/examples/: hello.rs
crates/kecs/kecs_derive/: Cargo.toml
crates/kecs/kecs_derive/kecs_derive_impl/: Cargo.toml
crates/kecs/kecs_derive/kecs_derive_impl/src/: lib.rs
crates/kecs/kecs_derive/src/: lib.rs
crates/kecs/src/: chained_iterator.rs  component_bundle.rs  entities.rs  hierarchy.rs  lib.rs  option_iterator.rs  query.rs  scheduler.rs  singleton_queries.rs  storage_lookup.rs  systems.rs  tests.rs  world.rs
crates/kgltf/: .gitignore  Cargo.toml  README.md
crates/kgltf/examples/: box.rs  glb.rs  hello.rs  roundtrip.rs
crates/kgltf/generator/: Cargo.toml
crates/kgltf/generator/schema/: README.md
crates/kgltf/generator/src/: main.rs
crates/kgltf/src/: glb.rs  gltf_json.rs  lib.rs
crates/kgraphics/: Cargo.toml  index.html  kwasm.js
crates/kgraphics/examples/: framebuffer.rs  hello.rs
crates/kgraphics/src/: gl_shared.rs  graphics_backend_trait.rs  lib.rs  pipeline_builder.rs
crates/kgraphics/src/do_nothing_backend/: mod.rs
crates/kgraphics/src/gl/: bump_allocator.rs  command_buffer.rs  gl_native.rs  mod.rs
crates/kgraphics/src/metal/: mod.rs
crates/kgraphics/src/webgl_backend/: mod.rs  webgl_backend.js
crates/kmath/: Cargo.toml
crates/kmath/benches_disabled/: bench.rs
crates/kmath/examples/: hello.rs
crates/kmath/src/: geometry.rs  intersections.rs  lib.rs  matrix.rs  numeric_traits.rs  projection_matrices.rs  quaternion.rs  tests.rs  vector.rs
crates/kserde/: .gitignore  Cargo.toml  README.md
crates/kserde/examples/: custom_serialize_deserialize.rs  derive.rs  hello.json  hello.rs  read_and_write.rs
crates/kserde/kserde_derive/: Cargo.toml
crates/kserde/kserde_derive/src/: lib.rs
crates/kserde/kserde_derive_impl/: Cargo.toml
crates/kserde/kserde_derive_impl/src/: lib.rs
crates/kserde/src/: deserialize_trait.rs  lib.rs  serialize_trait.rs  thing.rs
crates/kserde/src/json/: json_deserialize.rs  json_serialize.rs
crates/kserde/tests/: json_test_suite.rs
crates/ktasks/: Cargo.toml  README.md
crates/ktasks/examples/: hello.rs  local_task.rs  spawn_main.rs
crates/ktasks/src/: lib.rs
crates/kudo/: Cargo.toml
crates/kudo/examples/: hello.rs
crates/kudo/kudo_derive/: Cargo.toml
crates/kudo/kudo_derive/kudo_derive_impl/: Cargo.toml
crates/kudo/kudo_derive/kudo_derive_impl/src/: lib.rs
crates/kudo/kudo_derive/src/: lib.rs
crates/kudo/src/: chained_iterator.rs  component_bundle.rs  entities.rs  hierarchy.rs  lib.rs  multi_iterator.rs  query.rs  scheduler.rs  sparse_set.rs  storage_lookup.rs  systems.rs  tests.rs  world.rs
crates/kui/: .gitignore  Cargo.toml
crates/kui/src/: drawer.rs  fonts.rs  images.rs  lib.rs  style.rs  texture_atlas.rs
crates/kui/src/widgets/: button.rs  column_and_row.rs  mod.rs  padding.rs  panel.rs  scroll_view.rs  slider.rs  split.rs  text.rs
crates/kui/src/widgets2/: align.rs  animation.rs  button.rs  center.rs  conditional.rs  consecutive.rs  constrain_size.rs  cursor_event_handlers.rs  expand.rs  fill.rs  fit.rs  ignore_dimension.rs  ignore_size.rs  image.rs  link.rs  max_size.rs  mod.rs  not_enough_space.rs  padding.rs  scroll_view.rs  slider.rs  split.rs  text.rs  text_box.rs  toggle.rs  widget_children.rs
crates/kwasm/: Cargo.toml  README.md  index.html  web_build.sh  web_build_no_atomics.sh
crates/kwasm/examples/: fetch.rs  hello.js  hello.rs  web_worker.rs
crates/kwasm/examples/with_wasm_bindgen/: Cargo.toml  build.sh  index.html
crates/kwasm/examples/with_wasm_bindgen/src/: main.rs
crates/kwasm/examples/with_wasm_bindgen/web_build/: with_wasm_bindgen.js  with_wasm_bindgen_bg.wasm
crates/kwasm/examples/with_wasm_bindgen/web_build/snippets/kwasm-80cccf68b194aed3/js/: kwasm.js
crates/kwasm/js/: kwasm.js
crates/kwasm/src/: js_future.rs  js_object.rs  lib.rs  panic_hook.rs  web_worker.rs
crates/kwasm/src/libraries/: console.rs  download.rs  drag_and_drop.rs  eval.rs  fetch.js  fetch.rs  instant.rs  load_image.rs  open_file.rs  store_data.rs
examples/: gltf.rs  (+22 more)
(+102 files in other folders)
