[package]
name = "koi"
version = "0.1.0"
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[workspace]
members = ["crates/*", "third_party/koi_kolor/build/kolor"]

[features]
default = ["audio", "graphics", "renderer", "drawer2d", "png", "jpeg", "gltf", "ui", "hdri"]
graphics = ["kgraphics"]
audio = ["oddio", "kaudio"]
renderer = []
drawer2d = []
xr = []
jpeg = ["jpeg-decoder"]
gltf = ["kgltf"]
ui = ["kui"]
hdri = ["hdrldr"]

[dependencies]
kapp = {path = "crates/kapp",  default-features=false}
kecs = {path = "crates/kecs"}
ktasks = {path = "crates/ktasks"}
kmath = {path = "crates/kmath"}
klog = {path = "crates/klog"}
kcolor = {path = "crates/kcolor"}

kgraphics = {path = "crates/kgraphics",  optional = true}
kaudio = {path = "crates/kaudio",  optional = true}
kgltf = {path = "crates/kgltf", optional = true}
kui = {path = "crates/kui", optional = true}

oorandom = "11.1.3"
png = {version = "0.17.0", optional = true}
jpeg-decoder = {version = "0.1.20", default-features = false, optional = true}
hdrldr = {version = "0.1.2", optional = true}
oddio = {version = "0.4.1", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "crates/kwasm",  version = "0.1.0"}

[profile.dev.package.fontdue]
opt-level = 3