[package]
name = "koi"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[workspace]
members = ["crates/*"]

[features]
default = ["audio", "graphics", "drawer2d", "imagine_png", "jpeg", "gltf", "ui", "hdri", "gl", "kapp", "default_font"]
SDL = ["kapp/SDL", "kaudio/SDL", "kgraphics/SDL"]
graphics = []
gl = ["kgraphics/gl"]
headless = ["kgraphics/do_nothing_backend"]
audio = ["oddio", "kaudio"]
drawer2d = []
xr = []
jpeg = ["jpeg-decoder"]
gltf = ["kgltf"]
ui = ["kui"]
hdri = ["hdrldr"]
physics = ["kphysics"]
imagine_png = ["imagine"]
tracing_allocator = ["ktracing_allocator"]
default_font = ["kui/default_font"]
network_requests = ["ureq"]

[dependencies]
kapp = {path = "crates/kapp", default-features=false, features=["kserde"], optional=true}
kapp_platform_common = {path = "crates/kapp/kapp_platform_common"}
kecs = {path = "crates/kecs"}
ktasks = {path = "crates/ktasks"}
kmath = {path = "crates/kmath"}
klog = {path = "crates/klog"}
kcolor = {path = "crates/kcolor"}
kserde = {path = "crates/kserde"}

ktracing_allocator = {path = "crates/ktracing_allocator", optional = true}

kphysics = {path = "crates/kphysics",  optional = true}
kgraphics = {path = "crates/kgraphics",  optional = true, default-features=false}
kaudio = {path = "crates/kaudio",  optional = true}
kgltf = {path = "crates/kgltf", optional = true}
kui = {path = "crates/kui", optional = true, default-features=false}

oorandom = "11.1.3"
png = {version = "0.17.0", optional = true}
jpeg-decoder = {version = "0.1.20", default-features = false, optional = true}
hdrldr = {version = "0.1.2", optional = true}
oddio = {git = "https://github.com/Ralith/oddio/", optional = true}

imagine = {git="https://github.com/Lokathor/imagine", optional = true, features = ["png"]}
bytemuck = {version = "1.7.3", features = ["extern_crate_alloc"]}
ureq = {version = "2.5.0", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "crates/kwasm",  version = "0.1.0"}

[profile.dev.package.fontdue]
opt-level = 3

[[example]]
name = "xr"
required-features = ["xr"]

[[example]]
name = "headless"
required-features = ["headless"]

[[example]]
name = "collision_test"
required-features = ["physics"]

[[example]]
name = "physics"
required-features = ["physics"]