[package]
name = "kaudio"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2021"

[features]
default = ["wav"]
wav = ["hound"]
SDL = ["fermium"]

[dependencies]
hound = {version = "3.4.0", optional = true}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
fermium = {version = "20016.1.1", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm"}
