[package]
name = "kaudio"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2021"

[features]
default = ["wav"]
wav = ["hound"]
SDL = ["fermium"]

[dependencies]
hound = {git = "https://github.com/ruuda/hound.git", revision = "553be96", optional = true}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
fermium = {version = "22604.0.0", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm"}
