[package]
name = "kcolor"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kecs = {path = "../kecs"}
kmath = {path = "../kmath"}
kserde = {path = "../kserde"}

# This is copied / modified locally because it can't build presently with `glam` disabled.
kolor = {version = "0.1.8", default-features=false, features=["f32", "std"]}