[package]
name = "kecs"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["scheduler"]
scheduler = ["ktasks"]

[dependencies]
ktasks = {path = "../ktasks", optional = true}
kecs_derive = {path = "kecs_derive"}