[package]
name = "kgraphics"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"

[dependencies]
kapp = { path = "../kapp", default-features=false, features=["gl_context"]}
raw-window-handle = "0.4.2"
futures-executor = {version = "0.3.12", optional = true}
klog = {path= "../klog"}
gl33 = {version = "0.2.1", optional = true}
chlorine = "1.0.7"

[features]
default = ["gl"]
gl = ["gl33"]
do_nothing_backend = []
# This feature only exists for a single function that takes in a window differently.
SDL = []


[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm", features = []}
