[package]
name = "kgraphics"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
kapp = { path = "../kapp", default-features=false, features=["gl_context"]}
raw-window-handle = "0.4.2"
futures-executor = {version = "0.3.12", optional = true}
klog = {path= "../klog"}
gl33 = {version = "0.2.1", optional = true}

[features]
default = ["gl"]
gl = []
do_nothing_backend = []
# This feature only exists for a single function that takes in a window differently.
SDL = ["gl33"]

[target.'cfg(target_os="windows")'.dependencies]
gl33 = {version = "0.2.1"}

[target.'cfg(target_os="macos")'.dependencies]
gl33 = {version = "0.2.1"}
objc = "0.2.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm", features = []}
