[package]
name = "kmath"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
kserde = {path = "../kserde"}
num-traits = "0.2.15"

# [dev-dependencies]
# bencher = "0.1.5"
# glam = "0.14.0"
# ultraviolet = "0.8.0"
# nalgebra = "0.26.2"
# 
# [[bench]]
# name = "bench"
# harness = false