[package]
name = "kmath"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = []

[dependencies]
kserde = {path = "../kserde"}
bytemuck = {version = "1.12.2", optional = true}

# [dev-dependencies]
# bencher = "0.1.5"
# glam = "0.14.0"
# ultraviolet = "0.8.0"
# nalgebra = "0.26.2"
#
# [[bench]]
# name = "bench"
# harness = false
