[package]
name = "ktasks"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klog = {path = "../klog"}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm"}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
num_cpus = "1.13.1"