[package]
name = "kui"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
fontdue = "0.6.2"
rect_packer = "0.2.1"
kmath = {path = "../kmath"}
kapp_platform_common = {path = "../kapp/kapp_platform_common"}
kcolor = {path = "../kcolor"}
kwasm = {path = "../kwasm", optional = true}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
fontdb = "0.7.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../kwasm"}

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["default_font"]
default_font = []
