[package]
name = "kwasm"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
once_cell = "1.8.0"
wasm-bindgen = { version = "*", optional = true }
js-sys = { version = "*", optional = true }

[dev-dependencies]
ktasks = {path = "../ktasks"}

[features]
default = []
wasm_bindgen_support = ["wasm-bindgen", "js-sys"]