[package]
name = "kapp_gl_context"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
kapp_platform_common = { path = "../kapp_platform_common" }
raw-window-handle = "0.3.3"

[dev-dependencies]
glow = {version = "0.4.0"}
kapp = {path = "../"}

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="windows")'.dependencies]
lawrencium = {git = "https://github.com/Lokathor/lawrencium", rev = "4079f8a"}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../kwasm"}
wasm-bindgen = {version = "0.2.*", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
optional = true
version = "0.3.*"
features = [
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "WebGlContextAttributes",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "Window"
]

[features]
default = []
wasm_bindgen_support = ["web-sys", "wasm-bindgen"]