[package]
name = "kapp_platforms"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[lib]

[dependencies]
raw-window-handle = "0.3.3"
kapp_platform_common = { path = "../kapp_platform_common" }
klog = {path = "../../klog"}
fermium = {version = "20014.2.0", optional = true}

[features]
default = []
SDL = ["fermium"]
wasm_bindgen_support = ["kwasm/wasm_bindgen_support"]

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="windows")'.dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../kwasm"}
