[package]
name = "kserde_derive"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"

[dependencies]
kreflect_common = {path = "../../kreflect/kreflect_common", features = ["proc_macro"]}
kserde_derive_impl = {path = "../kserde_derive_impl"}

[lib]
proc-macro = true