[package]
name = "with_wasm_bindgen"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kwasm = {path = "../../.", features=["wasm_bindgen_support"]}
wasm-bindgen = "*"
web-sys = {version="0.3.49", features = ["console"]}